<resources>
    <string name="app_name">MusicApp</string>
    <string name="login_title" translatable="false">MusicApp</string>
    <string name="start_session" translatable="false">Iniciar sesión</string>
    <string name="username" translatable="false">Usuario</string>
    <string name="password" translatable="false">Contraseña</string>
    <string name="forgot_password" translatable="false">Olvidé mi contraseña</string>
    <string name="remember_user_on_device" translatable="false">Recordar mi usuario en este dispositivo</string>
    <string name="dont_have_a_account" translatable="false">No tengo una cuenta</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_tracks">Top canciones</string>
    <string name="my_loved_tracks">Mis canciones favoritas</string>
    <string name="minutes">%1$s mins</string>
    <string name="play_counts">%1$s reproducciones</string>
    <string name="nombre_apellido">Nombre: %1$s Apllido: %2$s y Edad: %3$d</string>
    <string name="exit_session">Cerrar sesión</string>
</resources>
