<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/textview_default_margin_bottom"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_session"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/textview_default_margin_bottom"
        android:textAppearance="?android:textAppearanceMedium"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/etUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal"
            android:ems="15"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/textview_default_margin_bottom"
            android:ems="15"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/textview_default_margin_bottom"
        android:textColor="@android:color/holo_red_dark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_user_on_device"/>

        <Space
            android:layout_width="@dimen/remember_user_switch_space"
            android:layout_height="wrap_content" />

        <Switch android:id="@+id/swRememberUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button android:id="@+id/btnStartSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_session"
        android:layout_gravity="center_horizontal"
        android:ems="20" />

    <Button android:id="@+id/btnDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_a_account"
        android:layout_gravity="center_horizontal"
        android:ems="20" />

</LinearLayout>